[gd_scene load_steps=15 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://tree.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://rocket.png" type="Texture" id=4]
[ext_resource path="res://flame.png" type="Texture" id=5]
[ext_resource path="res://camera.gd" type="Script" id=6]
[ext_resource path="res://ui.gd" type="Script" id=7]
[ext_resource path="res://font.tres" type="DynamicFont" id=8]
[ext_resource path="res://Pixeled.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://snow.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=3]

size = 22
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[node name="world" type="Node2D" index="0"]

script = ExtResource( 1 )
house_count = 25
house_padding = 3
house_seperation = 3

[node name="tree" type="RigidBody2D" parent="." index="0"]

position = Vector2( 480, 496 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = false
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 2 )
_sections_unfolded = [ "Angular", "Applied Forces", "Linear", "Transform" ]
__meta__ = {
"_edit_group_": true
}
fly_seconds = 10

[node name="sprite" type="Sprite" parent="tree" index="0"]

scale = Vector2( 7, 7 )
z_index = 1
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="rocket" type="Sprite" parent="tree/sprite" index="0"]

position = Vector2( 0, 3.42857 )
scale = Vector2( 1, 1 )
z_index = 2
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="flame" type="Sprite" parent="tree/sprite/rocket" index="0"]

position = Vector2( 0, 2 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="collider" type="CollisionShape2D" parent="tree" index="1"]

shape = SubResource( 1 )

[node name="camera" type="Camera2D" parent="tree" index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="house_focus" type="Tween" parent="tree/camera" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="bottom" type="Area2D" parent="tree" index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collider" type="CollisionShape2D" parent="tree/bottom" index="0"]

modulate = Color( 0.0325317, 0.320312, 0, 1 )
position = Vector2( 0, 29 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="fuel" type="Label" parent="tree" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -48.0
margin_right = 8.0
margin_bottom = -34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "fuel"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="launch_wait" type="Timer" parent="tree" index="5"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="out_of_fuel_wait" type="Timer" parent="tree" index="6"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="ui" type="CanvasLayer" parent="." index="1"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 7 )

[node name="score" type="Label" parent="ui" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0.313726, 0.333333, 0.541176, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="fuel" type="Label" parent="ui" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 80.0
margin_right = 244.0
margin_bottom = 171.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0.313726, 0.333333, 0.541176, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "Fuel: 100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="no_fuel" type="Label" parent="ui" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_top = 208.0
margin_right = 503.0
margin_bottom = 299.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0.313726, 0.333333, 0.541176, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "Out of fuel! :("
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="title" type="Label" parent="ui" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -16.0
margin_top = 32.0
margin_right = 650.0
margin_bottom = 311.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.211765, 0.701961, 0.054902, 1 )
custom_colors/font_color_shadow = Color( 0.313726, 0.333333, 0.541176, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "would this
even be legal?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="help" type="Label" parent="ui" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -16.0
margin_top = 272.0
margin_right = 650.0
margin_bottom = 551.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.211916, 0.703125, 0.0549316, 1 )
custom_colors/font_color_shadow = Color( 0.313726, 0.333333, 0.541176, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "(click to start and fly)"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="left" type="Label" parent="ui" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 99.0
margin_top = 245.0
margin_right = 458.0
margin_bottom = 336.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0.313726, 0.333333, 0.541176, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 0
text = "v"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="right" type="Label" parent="ui" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 545.0
margin_top = 277.0
margin_right = 904.0
margin_bottom = 368.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0.313726, 0.333333, 0.541176, 1 )
custom_constants/shadow_offset_x = -3
custom_constants/shadow_offset_y = 0
text = "v"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="snow_ground" type="StaticBody2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 32928, 4816 )
scale = Vector2( 100000, 500 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="snow_ground" index="0"]

texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="collider" type="CollisionShape2D" parent="snow_ground" index="1"]

shape = SubResource( 4 )

[connection signal="area_entered" from="tree/bottom" to="tree" method="_on_bottom_area_entered"]

[connection signal="timeout" from="tree/launch_wait" to="tree" method="_on_launch_wait_timeout"]

[connection signal="timeout" from="tree/out_of_fuel_wait" to="tree" method="_on_out_of_fuel_wait_timeout"]


